examples/invalid/not_declared/melody.vbr
moderato() {
    x: quarter <-> arr[2]|
}